crates/engine/tests/snapshots/oracle_parser__snapshot_baneslayer_angel.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [
    {
      "Protection": {
        "CardType": "demons"
      }
    },
    {
      "Protection": {
        "CardType": "dragons"
      }
    }
  ]
}
