crates/engine/tests/snapshots/oracle_parser__snapshot_counterspell.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Counter",
        "target": {
          "type": "Typed",
          "card_type": "Card",
          "subtype": null,
          "controller": null,
          "properties": [
            {
              "type": "InZone",
              "zone": "Stack"
            }
          ]
        },
        "source_static": null
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Counter target spell.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
