crates/engine/tests/snapshots/oracle_parser__snapshot_forest.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [],
  "triggers": [],
  "statics": [],
  "replacements": []
}
