crates/engine/tests/snapshots/oracle_parser__snapshot_jace_the_mind_sculptor.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Dig",
        "count": 1,
        "destination": null
      },
      "cost": {
        "type": "Loyalty",
        "amount": 2
      },
      "sub_ability": {
        "kind": "Activated",
        "effect": {
          "type": "ChangeZone",
          "origin": null,
          "destination": "Library",
          "target": {
            "type": "Any"
          },
          "owner_library": false
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false
      },
      "duration": null,
      "description": "+2: Look at the top card of target player's library. You may put that card on the bottom of that player's library.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Draw",
        "count": {
          "type": "Fixed",
          "value": 3
        }
      },
      "cost": {
        "type": "Loyalty",
        "amount": 0
      },
      "sub_ability": {
        "kind": "Activated",
        "effect": {
          "type": "ChangeZone",
          "origin": "Hand",
          "destination": "Library",
          "target": {
            "type": "Typed",
            "card_type": null,
            "subtype": null,
            "controller": "You",
            "properties": [
              {
                "type": "InZone",
                "zone": "Hand"
              }
            ]
          },
          "owner_library": false
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false
      },
      "duration": null,
      "description": "0: Draw three cards, then put two cards from your hand on top of your library in any order.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Bounce",
        "target": {
          "type": "Typed",
          "card_type": "Creature",
          "subtype": null,
          "controller": null,
          "properties": []
        },
        "destination": null
      },
      "cost": {
        "type": "Loyalty",
        "amount": -1
      },
      "sub_ability": null,
      "duration": null,
      "description": "−1: Return target creature to its owner's hand.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "ChangeZoneAll",
        "origin": null,
        "destination": "Exile",
        "target": {
          "type": "Typed",
          "card_type": "Card",
          "subtype": null,
          "controller": null,
          "properties": []
        }
      },
      "cost": {
        "type": "Loyalty",
        "amount": -12
      },
      "sub_ability": {
        "kind": "Activated",
        "effect": {
          "type": "ChangeZoneAll",
          "origin": "Hand",
          "destination": "Library",
          "target": {
            "type": "Controller"
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false
      },
      "duration": null,
      "description": "−12: Exile all cards from target player's library, then that player shuffles their hand into their library.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
