crates/engine/tests/snapshots/oracle_parser__snapshot_murder.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Destroy",
        "target": {
          "type": "Typed",
          "card_type": "Creature",
          "subtype": null,
          "controller": null,
          "properties": []
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Destroy target creature.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
