crates/engine/tests/snapshots/oracle_parser__snapshot_questing_beast.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "DamageDone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "DealDamage",
          "amount": {
            "type": "Variable",
            "value": "that much"
          },
          "target": {
            "type": "Typed",
            "card_type": "Planeswalker",
            "subtype": null,
            "controller": null,
            "properties": []
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "combat_damage": true,
      "secondary": false,
      "valid_target": null,
      "valid_source": {
        "type": "SelfRef"
      },
      "description": null,
      "constraint": null,
      "condition": null
    }
  ],
  "statics": [
    {
      "mode": {
        "Other": "CantBeBlocked"
      },
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "characteristic_defining": false,
      "description": "Questing Beast can't be blocked by creatures with power 2 or less."
    }
  ],
  "replacements": [
    {
      "event": "DamageDone",
      "execute": null,
      "mode": {
        "type": "Mandatory"
      },
      "valid_card": null,
      "description": "Combat damage that would be dealt by creatures you control can't be prevented.",
      "condition": null
    }
  ],
  "extractedKeywords": []
}
