crates/engine/tests/snapshots/oracle_parser__snapshot_rancor.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": {
        "Unknown": "When ~ is put into a graveyard from the battlefield"
      },
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "Bounce",
          "target": {
            "type": "SelfRef"
          },
          "destination": null
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "combat_damage": false,
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "When ~ is put into a graveyard from the battlefield",
      "constraint": null,
      "condition": null
    }
  ],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "Typed",
        "card_type": "Creature",
        "subtype": null,
        "controller": null,
        "properties": [
          {
            "type": "EnchantedBy"
          }
        ]
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 2
        },
        {
          "type": "AddToughness",
          "value": 0
        },
        {
          "type": "AddKeyword",
          "keyword": "Trample"
        }
      ],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "characteristic_defining": false,
      "description": null
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
